# ai-tools

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  README.md  lefthook.yml  oxfmt.json  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/youtube-transcript/: .env.example  .env.local.example  README.md  docker-compose.yml  next.config.js  package.json  playwright.config.ts  start.sh  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/youtube-transcript/api/: Cargo.toml  README.md
apps/youtube-transcript/api/src/: converter.rs  downloader.rs  error.rs  extractor.rs  innertube.rs  lib.rs  main.rs  types.rs
apps/youtube-transcript/docker/: Dockerfile.api  Dockerfile.web
apps/youtube-transcript/messages/: zh.json
apps/youtube-transcript/src/: i18n.ts  middleware.ts
apps/youtube-transcript/src/app/: layout.tsx
apps/youtube-transcript/src/app/[lang]/: layout.tsx  page.tsx
apps/youtube-transcript/src/lib/: navigation.ts
apps/youtube-transcript/tests/e2e/: basic-flow.test.ts
apps/youtube-transcript/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/youtube-transcript/web/messages/: en.json  zh.json
apps/youtube-transcript/web/src/: instrumentation.ts
apps/youtube-transcript/web/src/app/: globals.css
apps/youtube-transcript/web/src/components/: empty-state.tsx
docs/plans/: 2026-03-11-youtube-transcript-design.md  2026-03-11-youtube-transcript.md  2026-03-16-youtube-transcript-ui-redesign-implementation.md  2026-03-16-youtube-transcript-ui-redesign.md
(+8 files in other folders)
