[package]
name = "youtube-transcript"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"
once_cell = "1.20"
thiserror = "2.0"
async-trait = "0.1"
